# browser_plugins

./: .gitignore  CMakeLists.txt  README.md
include/: chromium_plugin_memade.hpp
lib/x64/Debug/: browser_hijack.exp  browser_hook.exp
lib/x64/Release/: browser_hijack.exp  browser_hook.exp
src/browser_hijack/: CMakeLists.txt  core.cpp  core.h  dllmain.cpp  export.cpp  export.h  global.cpp  global.h  stdafx.h
src/browser_hook/: CMakeLists.txt  browser.h  browser_hook.def  browser_hook.rc  browser_process_crashpad_handler.cpp  browser_process_gpu.cpp  browser_process_main.cpp  browser_process_renderer.cpp  browser_process_utility.cpp  cmdline.cpp  cmdline.h  config.cpp  config.h  core.cpp  core.h  dllmain.cpp  export.cpp  export.h  extensions.cpp  extensions.h  global.cpp  global.h  plugin.cpp  plugin.h  plugin_browser_hook.cpp  plugin_ui.cpp  plugin_ui.h  resource.h  stdafx.h  ui_app.cpp  ui_app.h  ui_child_configure.cpp  ui_child_configure.h  ui_child_developer.cpp  ui_child_developer.h  ui_frame.cpp  ui_frame.h  ui_treectrl.cpp  ui_treectrl.h
src/browser_hook/res/: config.xml  setup.xml
src/browser_hook/res/skin/: main.xml
src/browser_injector/: CMakeLists.txt  dllmain.cpp  export.cpp  stdafx.h
src/chrome_elf_hijack/: build.bat  chrome_elf.c  chrome_elf.def  dumpbin_exports.txt
src/chrome_self_hijack/: build.bat  dumpbin_exports.txt  gen_def.py  version.c  version.def
src/main/: CMakeLists.txt  config.h  dllmain.cpp  export.cpp  export.h  main.cpp  main.def  main.h  stdafx.h
src/manager/: CMakeLists.txt  app.cpp  app.h  config.cpp  config.h  frame.h  global.cpp  global.h  local.cpp  local.h  main.cpp  manager.cpp  manager.h  manager.rc  resource.h  setup.cpp  setup.h  stdafx.h  ui_app.cpp  ui_app.h  ui_components.cpp  ui_components.h  ui_frame.cpp  ui_frame.h  ui_onmessage.cpp  ui_onnotify.cpp
src/manager/res/: setup.xml
src/manager/res/skin/: browser_config_list_action_node.xml  browser_config_node.xml  browser_config_page.xml  main.xml
src/manager/res/skin/themes/default/: global.xml
src/manager/res/skin/themes/default/main/: main.xml
src/manager_site/: CMakeLists.txt  app.h  frame.cpp  global.cpp  local.h  main.cpp  manager.h  manager.rc  resource.h  setup.h  stdafx.h  ui_app.cpp  ui_app.h  ui_components.h  ui_frame.cpp  ui_frame.h  ui_onmessage.cpp  ui_onnotify.cpp
src/manager_site/res/script_js/: jstest.html  jstest2.html  jstest3.html
src/manager_site/res/skin/themes/default/cefmain/: cef.html  main.xml
src/manager_site/res/skin/themes/default/main/: listbox_browser_config_item.xml  listbox_browser_config_page.xml
src/manager_site/scripts/: PreBuildEvent.bat
src/plugin_hook/: CMakeLists.txt  config.cpp  dllmain.cpp  export.cpp  export.h  plugin_hook.cpp  plugin_hook.h  stdafx.h
src/plugin_win/: CMakeLists.txt  config.h  export.cpp  export.h  plugin_win.cpp  plugin_win.def  plugin_win.h  stdafx.h
tests/test_browser_plugin_hook/: CMakeLists.txt  main.cpp
